feat: #3 Added kafka setup

--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
+    "is-alphanumeric": "^1.0.0",
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "pm2": "^5.2.2",
+    "nodemon": "^2.0.21",
+    "uuid": "^9.0.0",
+    "validate.js": "^0.13.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "mocha": "^10.2.0"
   },
   "scripts": {
-    "start": "pm2 start app.js --exp-backoff-restart-delay=100 --max-memory-restart 100M",
-    "stop": "pm2 stop all",
-    "logs": "pm2 logs",
-    "scale-zero": "pm2 delete all",
+    "start": "node app.js",
     "test": "mocha",
     "lint": "node_modules/eslint/bin/eslint.js .",
     "auto:lint:fix": "eslint --fix --ext .js,.jsx ."
