--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
+    "express-json-validator-middleware": "^3.0.1",
     "is-alphanumeric": "^1.0.0",
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
